@@ -160,6 +160,7 @@
 
   <!-- Indexes -->
   <adapter name="getRawClassifier" factory=".indexes.getRawClassifier" />
+  <adapter name="getConfigId" factory=".indexes.getConfigId" />
   <adapter name="Description" factory=".indexes.Description" />
   <adapter name="hasAnnexesToPrint" factory=".indexes.hasAnnexesToPrint" />
   <adapter name="hasAnnexesToSign" factory=".indexes.hasAnnexesToSign" />
